<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>

        <variable
            name="user"
            type="com.wael.android.teammates.sign.data.User" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/frag_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="com.wael.android.teammates.sign.fragments.SignUp"

    >

    <EditText
        android:id="@+id/editText6"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:text="@={user.email}"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="83dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/team_mates"
        android:textColor="#090000"
        android:textSize="66sp"
        app:fontFamily="@font/alex_brush"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_shadow"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView

        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="72dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


    </ImageView>

    <EditText
        android:id="@+id/editText"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:text="@={user.name}"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:text="@={user.phoneNumber}"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:text="@={user.password}"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
