<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="337dp"
        android:layout_height="291dp"
        android:background="@color/loginbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.384">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="142dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="99dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_your_password"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:importantForAutofill="no" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="83dp"
        android:layout_marginTop="92dp"
        android:text="@string/team_mates"
        android:textColor="#090000"
        android:textSize="66sp"
        android:gravity="center"
        app:fontFamily="@font/alex_brush"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/button_shadow"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.274" />

    <ImageView

        android:layout_width="69dp"
        android:layout_height="56dp"
        android:src="@drawable/images"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.178">


    </ImageView>

    <ImageView

        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginBottom="76dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_text"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>