<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.wael.android.teammates.sign.data.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color">

        <TextView
            android:id="@+id/login_logo"
            android:layout_width="330dp"
            android:layout_height="83dp"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:text="@string/team_mates"
            android:textColor="#090000"
            android:textSize="45sp"
            app:fontFamily="@font/alex_brush"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:layout_width="69dp"
            android:layout_height="56dp"

            android:src="@drawable/images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo">


        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="60dp"
            android:background="@color/loginbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo">

            <EditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@={user.email}"
                android:gravity="center_horizontal"
                android:hint="@string/enter_your_id"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </EditText>

            <EditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/enter_your_password"
                android:text="@={user.password}"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_email_et">

            </EditText>

            <ImageView
                android:id="@+id/facebook_login"
                android:layout_width="55dp"
                android:layout_height="33dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/facebook"
                app:layout_constraintEnd_toStartOf="@+id/twitter_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_password_et">


            </ImageView>

            <ImageView
                android:id="@+id/twitter_login"
                android:layout_width="50dp"
                android:layout_height="33dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/twitter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/facebook_login"
                app:layout_constraintTop_toBottomOf="@id/login_password_et">


            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="143dp"
            android:layout_height="48dp"
            android:background="@drawable/button_shadow"
            android:text="Login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="390dp" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>